--- a/css/juooo.css
+++ b/css/juooo.css
@@ -1,13 +1,18 @@
 /* nav  */
 .nav{
    min-width:1214px;
-   height:34px;
-   line-height:34px;
+   height:37px;
+   line-height:37px;
    background: #f5f5f5; 
 }
+.nav-little{
+    width:1200px;
+    height:37px;
+    line-height:37px;
+    margin:0 auto;
+    background: #f5f5f5;
+}
 .nav-fl{
-    padding-left:64px;
-    box-sizing: border-box;
     float:left;
 }
 .nav-fl-span{
@@ -20,22 +25,94 @@
 .nav-fr{
     height:34px;
     line-height:34px;
-    padding-right:100px;
-    box-sizing: border-box;
     float:right;
 }
 .li-first{
     float:left;
 }
 .li-first-a{
-    padding:0 11px;
+    padding:0 12px;
     box-sizing: border-box;
     font-size: 12px;
     color:#666;
     border-right: 1px solid #dbdbdb;
 }
-.li-first-last a{
+.li-first-last-a{
     border-right:0;
+    border-left: 1px solid #dbdbdb;
+}
+.nav-ul-second{
+    display: none;
+    position: absolute;
+    top: 37px;
+    z-index: 1;
+    width: 94px;
+    background: #fff;
+    text-align: center;
+    border: 1px solid #ebebeb;
+    border-top: none;
+}
+.li-first:hover .li-first-a{
+    color:#ff852d;
+}
+.li-fourth:hover .nav-ul-second{
+    display:block;
+}
+.li-fourth:hover{
+    background: #fff;
+} 
+.nav-second-ul{
+    display: block;
+    position: absolute;
+    top: 37px;
+    left: 390px;
+    z-index: 10;
+    width: 895px;
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    border-top: none;
+    box-shadow: 0px 1px 2px #ccc;
+    padding: 20px 40px 20px 54px;
+    box-sizing: border-box;
+   
+}
+.li-first-bg1{
+    background: url(http://basic.juooo.com/Home/web-4.1.1/images/index/icons_03.png) no-repeat;
+    display: inline-block;
+    width: 8px;
+    height: 5px;
+    vertical-align: middle;
+    margin-left: 4px;
+    background-position: -186px -16px;
+}
+.li-first-bg2{
+    background: url(http://basic.juooo.com/Home/web-4.1.1/images/index/icons_03.png) no-repeat;
+    display: inline-block;
+    width: 9px;
+    height: 16px;
+    vertical-align: text-top;
+    margin-right: 4px;
+    background-position: -228px -11px;
+    
+}
+h4 a{
+    color: #333;
+}
+.ul-li1-left{
+    width: 165px;
+    margin-right: 24px;
+}
+.ul-li-left-a{
+    display: inline-block;
+    vertical-align: top;
+    width: 70px;
+    margin-right: 10px;
+    font-size: 12px;
+    color: #666;
+    line-height: 32px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .nav-img{
     width:1200px;
@@ -45,7 +122,7 @@
 .x{
     position: absolute;
     right: 84px;
-    top: 35px;
+    top: 37px;
     width: 48px;
     height: 20px;
     line-height: 20px;
@@ -56,3 +133,4 @@
     font-size: 11px;
     color: #fff;
 }
+
