--- a/css/juooo.css
+++ b/css/juooo.css
@@ -99,7 +99,7 @@
     float:left;
 }
 
-h4 a{
+h5 a{
     color: #999;
 }
 .ul-li1-left,.ul-li1-center{
@@ -251,6 +251,9 @@ h4 a{
 .search-down-a:hover{
     color:#ff7919
 }
+.-search-down-a:hover{
+    color:#ff7919;
+}
 .search-down{
     height:45px;
     line-height:45px;
@@ -272,6 +275,7 @@ h4 a{
     margin-right:40px;
 }
 .search-dowm-img{
+    height:42px;
     float:right;
 }
 /* banner */
@@ -294,6 +298,7 @@ h4 a{
     width:180px;
     height:52px;
     line-height:52px;
+    position:relative;
 }
 .banner-a{
     font-size:14px;
@@ -378,4 +383,376 @@ h4 a{
 .banner-li:hover .banner-a{
     color:#ff7919
 }
+.-banner{
+    margin-top:0;
+    width:1200px;
+    height:400px;
+    margin:0 auto;
+    overflow:hidden;
+    position:relative;
+}
+.-banner-ul{
+    width:8400px;
+}
+.banner-li2 {
+    width:1200px;
+    height:400px;
+   float:left;
+}
+.btn{
+     /* display: none; */
+    position: absolute;
+    width: 42px;
+    height: 70px;
+    background-color: transparent;
+    top: 50%;
+    margin-top: -35px;
+    background: url(http://basic.juooo.com/Home/web-4.1.1/images/index/icons_03.png) no-repeat;
+    background-repeat: no-repeat;
+}
+.left-btn{
+    left: 200px;
+    background-position: -88px -48px;
+}
+.right-btn{
+    right: 20px;
+    background-position: -150px -48px;
+}
+/* 二级菜单 */
+.ych{
+    display:none;
+    width:320px;
+    height:400px;
+    padding: 14px 30px;
+    box-sizing: border-box;
+    background-image: url(http://image.juooo.com/group1/M00/01/5C/rAoKNVn7qEWAHyWEAAAVXkQyoRc553.jpg);
+    position:absolute;
+    left:180px;
+}
+.ych-li{
+    width:60px;
+    height:60px;
+    line-height:60px;
+    text-align:center;
+    border-bottom:1px solid #ddd;
+}
+.ych-a{
+    font-size:14px;
+    color:#333;
+}
+.ych-a:hover{
+    color:#ff7919
+}
+.ych1{
+    top:-18px;
+}
+.music{
+    top:-70px;
+}
+.hj{
+    top:-122px;
+}
+.qz{
+    top:-174px;
+}
+.-music{
+    top:-226px;
+}
+.play{
+    top:-278px;
+}
+.player{
+    top:-330px;
+}
+.banner-li:hover .ych{
+    display:block;
+}
+/* 内容区 */
+.con{
+    width: 1200px;
+    margin: 0 auto;
+    padding-top:22px;
+    box-sizing: border-box;
+}
+.tips{
+    margin-bottom:28px;
+}
+/* 提示区 */
+.tips1{
+    width:191px;
+    padding:20px 18px 20px 14px;
+    box-sizing: border-box; 
+    border:1px solid #ededed;
+    background: #fcfcfc;
+    margin-right:10px;
+    float:left;
+}
+.tips1-pic{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-image: url(../images/tips1.png);
+    margin-right:13px;
+    float:left;
+}
+.tips1-p1{
+    font-size:16px;
+    color:#333333;
+    line-height:20px;
+}
+.tips1-p2{
+    font-size: 12px;
+    color: #b2b2b2
+}
+.tips-last{
+    margin-right:0;
+}
+/* 全国 */
+.country{
+    margin-bottom:92px;
+}
+.country-top1{
+    width:240px;
+    height:20px;
+    border-left:3px solid #ff7919;
+    padding-left:8px;
+    box-sizing: border-box;
+    margin-bottom:11px;
+    
+}
+.country-top1{
+    float:left;
+}
+.country-top2{
+    float:right;
+}
+.country-span1{
+    font-size: 18px;
+    color:#333;
+    margin-right:21px;
+}
+.cou-span1{
+    margin-right:137px;
+}
+.cou-span2{
+    font-size:20px;
+    color:#b2b2b2;
+}
+.cou-span2:hover{
+    color:#ff7919
+}
+.country-span2{
+    font-size: 14px;
+    color:#b2b2b2;
+    margin-right:21px;
+}
+.country-span2:hover{
+    color:#ff7919
+}
+.cou-down1{
+    width:220px;
+    margin-right:20px;
+    float: left;
+}
+.cou-down-img{
+    width:220px;
+    height:270px;
+    
+}
+.img-box{
+    height:270px;
+    margin-bottom: 14px;
+    position: relative;
+}
+.word-box{
+    width:220px;
+    position: absolute;
+    height:68px;
+    text-align: center;
+    background: #ff7919;
+    display:none;;
+    padding:13px 12px;
+    box-sizing: border-box;
+    bottom:-68px;
+    transition-duration: .2s;
+    
+}
+.img-box:hover .word-box{
+    display:block;
+    bottom:0;
+    
+}
+.word-box-a{
+    font-size:14px;
+    color:#fff;
+    line-height:24px;
+}
+.cou-down-p1{
+    font-size:14px;
+    color:#333;
+    margin-bottom: 24px;
+}
+.cou-down-span1{
+    font-size:14px;
+    color:#b2b2b2;
+    margin-right:95px;
+}
+.cou-down-span2{
+    font-size:14px;
+    color:#ff7919;
+}
+.cou-down-span3{
+    font-size:18px;
+    color:#ff7919;
+}
+.cou-down-span4{
+    font-size:14px;
+    color:#b2b2b2;
+}
+.coun-down2{
+    width:220px;
+    float:left;
+}
+.cou-down2-top-img{
+    width:220px;
+    margin-bottom: 15px;
+}
+.cou-down2-top-a{
+    padding-bottom: 16px;
+    box-sizing: border-box;
+    border-bottom: 1px dashed #eeeeee
+}
+.cou-down2-top-a1{
+    font-size:14px;
+    color:#333;
+    
+}
+.cou-down2-top-aa{
+    padding: 18px 0 36px;
+    box-sizing: border-box;
+    border-bottom: 2px solid #eeeeee
+}
+.cou-down2-top-a2{
+    font-size:14px;
+    color:#b2b2b2;
+}
+.cou-down2-top-a2:hover{
+    color:#ff7919
+}
+.cou-down2-top-a3:hover{
+    color:#ff7919
+}
+.cou-down2-top-a3{
+    font-size:14px;
+    color:#b2b2b2;
+}
+.cou-down2-bottom{
+    padding-top:12px;
+}
 
+.cou-down2-bottom1{
+    width:72px;
+    height:34px;
+    line-height:34px;
+    text-align:center;
+    margin:0 13px 13px 0;
+    border: 1px solid #eeeeee;
+    float:left;
+}
+.cou-down2-bottom-a{
+    font-size:14px;
+    color:#333;
+}
+.cou-down2-bottom2{
+    width:86px;
+    height:34px;
+    line-height:34px;
+    text-align:center;
+    margin: 0 13px 13px 0;
+    border: 1px solid #eeeeee;
+    float:left;
+}
+.cou-down2-bottom3{
+    width:58px;
+    height:34px;
+    line-height:34px;
+    text-align:center;
+    margin:0 13px 13px 0;
+    border: 1px solid #eeeeee;
+    float:left;
+}
+/* 巡回演出 */
+.tour{
+
+}
+.tour-p{
+    text-align: center;
+    font-size: 26px;
+    margin-bottom: 34px;
+}
+.tour-con1{
+    width:229px;
+    height:310px;
+    margin-right: 10px;
+    float: left;
+}
+.tour-img-box{
+    width:229px;
+    height:150px;
+    position: relative;
+}
+.tour-img-box1{
+    margin-bottom:10px;
+}
+.tour-word-box{
+    display: none;
+    width:229px;
+    height:150px;
+    padding:20px 10px;
+    box-sizing: border-box;
+    background: rgba(255, 121, 25, .9);
+    position:absolute;
+    bottom: -150px;
+    color:#fff;
+    font-size:14px;
+}
+.tour-num{
+    position:absolute;
+    bottom:20px;
+    right:10px;
+}
+.tour-img-box:hover .tour-word-box{
+    display:block;
+    bottom: 0;
+    transition:.2S;
+
+}
+.tour-con2{
+    width:203px;
+    height:310px;
+    margin-right: 10px;
+    float: left;
+}
+.tour-img-box2{
+    position: relative;
+    width:100%;
+    height:100%;
+}
+.tour-word-box2{
+    display:none;
+    width:100%;
+    height:100%;
+    background: rgba(255, 121, 25, .9);
+    padding:20px 10px;
+    box-sizing: border-box;
+    font-size:14px;
+    color:#fff;
+    position:absolute;
+    bottom: -310px;
+    transition-duration: .2s;
+}
+.tour-img-box2:hover .tour-word-box2{
+    display:block;
+    bottom:0;
+}
