--- a/css/juooo.css
+++ b/css/juooo.css
@@ -493,9 +493,26 @@ h5 a{
     width: 40px;
     height: 40px;
     background-repeat: no-repeat;
-    background-image: url(../images/tips1.png);
     margin-right:13px;
     float:left;
+}
+.tips1-pic1{
+    background-image: url(../images/tips1.png);
+}
+.tips1-pic2{
+    background-image: url(../images/tips2.png);
+}
+.tips1-pic3{
+    background-image: url(../images/tips3.png);
+}
+.tips1-pic4{
+    background-image: url(../images/tips4.png);
+}
+.tips1-pic5{
+    background-image: url(../images/tips5.png);
+}
+.tips1-pic6{
+    background-image: url(../images/tips6.png);
 }
 .tips1-p1{
     font-size:16px;
@@ -1200,11 +1217,205 @@ div.active{
     margin: 0 auto;
 }
 .us-left{
+    width:310px;
     padding-top:20px;
     box-sizing: border-box;
+    border-right:1px solid #f1f1f1;
+    float:left;
 }
 .us-left-p1{
     font-size: 16px;
     color: #333;
     margin-bottom: 28px;
+}
+.us-left-p2{
+    margin-bottom: 17px;
+}
+.us-left-a{
+    font-size: 12px;
+    color:#666;
+    margin-right: 35px;
+}
+.us-left-a:hover{
+    color:#ff7919;
+}
+.us-center{
+    width:500px;
+    padding-top:20px;
+    box-sizing: border-box;
+    border-right:1px solid #f1f1f1;
+    float:left;
+    text-align: center;
+}
+.us-center-p1{
+    font-size: 24px;
+    color: #ff7919;
+    margin-bottom: 25px;
+}
+.us-center-p2{
+    margin-left:40px;
+}
+.us-center-p3{
+    margin-left:15px;
+}
+.us-right{
+    padding-top:20px;
+    box-sizing: border-box;
+    float:right;
+}
+.ticket{
+    float:left;
+}
+.show{
+    margin-left:70px;
+}
+._ticket{
+    margin-left:5px;
+}
+.ticket-p{
+    font-size: 12px;
+    color:#666;
+    margin-right: 35px;
+    margin-left:20px;
+}
+/* footer */
+.footer{
+    width:100%;
+    padding-bottom:18px;
+    background: #f7f7f7;
+}
+.footer-little{
+    width:940px;
+    margin:0 auto;
+}
+.footer-top{
+    padding:23px 0;
+    box-sizing: border-box;
+    text-align: center;
+}
+.footer-top-span{
+    font-size: 12px;
+    color:#999;
+}
+.footer-span-a{
+    font-size: 12px;
+    color:#666;
+    padding:0 10px;
+}
+.footer-span-a:hover{
+    color:#ff7919;
+}
+.footer-span-a2{
+    border:1px solid #dadada;
+    border-top:none;
+    border-bottom:none;
+}
+.footer-center1{
+    float:left;
+    border-right:1px solid #dadada;
+    margin-bottom: 22px;
+}
+.footer-center1-span{
+    display:inline-block;
+    width:48px;
+    height:28px;
+    font-size: 12px;
+    color:#666;
+    margin:0 15px;
+}
+.footer-center-i{
+    display:inline-block;
+    width: 33px;
+    height:33px;
+    background:url(../images/icons_03.png);
+    vertical-align: middle;
+    margin-top:-10px;
+    margin-right:15px;
+}
+.footer-center-i1{
+    background-position: -311px -201px;
+}
+.footer-center-i2{
+    background-position: -85px -201px;
+}
+.footer-center-i3{
+    background-position: -178px -201px;
+}
+.footer-center-i4{
+    background-position:-229px -201px;
+}
+.footer-center-i5{
+    background-position:-129px -201px;
+}
+.footer-center-i6{
+    background-position:-85px -242px;
+}
+.footer-center-i7{
+    background-position:-302px -242px;
+}
+.footer-center-i8{
+    background-position:-155px -242px;
+}
+.footer-center-i9{
+    background-position:-196px -276px;
+}.footer-center-i10{
+    background-position:-196px -276px;;
+}
+.footer-center-i11{
+    width:44px;
+    height:32px;
+    background-position:-256px -276px;
+}
+.footer-center-i12{
+    background-position:-352px -200px;
+    width:50px;
+    height:32px;
+}
+.footer-centerlast{
+    border-right:none;
+}
+.footer-span-ab{
+    border:1px solid #dadada;
+    border-top:none;
+    border-bottom:none;
+}
+.footer-span-ablast{
+    border-right:none;
+}
+.footer-down{
+    margin-bottom: 8px;
+    text-align: center;
+}
+.footer-down2{
+    text-align: center;
+    margin-bottom:12px;
+}
+.footer-down2-span{
+    font-size: 12px;
+    color: #bdbdbd;
+}
+.footer-down2-i{
+    display:inline-block;
+    width: 18px;
+    height: 20px;
+    background:url(../images/icons_03.png);
+    background-position: -282px -141px;
+    margin:0 5px;
+    vertical-align: middle;
+}
+.footer-last{
+    text-align: center;
+}
+.footer-last-i{
+    background:url(../images/icons_03.png);
+    display: inline-block;
+    width: 84px;
+    height: 35px;
+}
+.footer-last-i1{
+    background-position: -89px -133px;
+    margin-right:10px;
+}
+.footer-last-i2{
+    background-position: -182px -133px;
 }
