--- a/css/juooo.css
+++ b/css/juooo.css
@@ -18,7 +18,7 @@
 .nav-fl-span{
     display:block;
     height:34px;
-   line-height:34px;
+    line-height:34px;
     font-size: 12px;
     color:#666;
 }
@@ -29,6 +29,7 @@
 }
 .li-first{
     float:left;
+    height:37px;
 }
 .li-first-a{
     padding:0 12px;
@@ -72,7 +73,7 @@
     border: 1px solid #f0f0f0;
     border-top: none;
     box-shadow: 0px 1px 2px #ccc;
-    padding: 20px 0 20px 54px;
+    padding: 20px 0 35px 54px;
     box-sizing: border-box;
    
 }
@@ -104,7 +105,7 @@ h5 a{
 }
 .ul-li1-left,.ul-li1-center{
     width: 165px;
-    height:197px;
+    height:160px;
     margin-right: 24px;
     border-right:1px solid #ddd
 }
@@ -394,6 +395,7 @@ h5 a{
 }
 .-banner-ul{
     width:8400px;
+    position:absolute;
 }
 .banner-li2 {
     width:1200px;
@@ -410,6 +412,8 @@ h5 a{
     margin-top: -35px;
     background: url(http://basic.juooo.com/Home/web-4.1.1/images/index/icons_03.png) no-repeat;
     background-repeat: no-repeat;
+    border:none;
+    outline:none;
 }
 .left-btn{
     left: 200px;
@@ -418,6 +422,24 @@ h5 a{
 .right-btn{
     right: 20px;
     background-position: -150px -48px;
+}
+.-banner-circle{
+    width:260px;
+    position:absolute;
+    right:45px;
+    bottom:10px;
+}
+.banner-circle{
+    float:left;
+    margin-right:10px;
+    width:12px;
+    height:12px;
+    background: #e0e4e6;
+    border-radius: 50%;
+    border:1px solid #e0e4e6
+}
+button.active1{
+    background: #fff;
 }
 /* 二级菜单 */
 .ych{
@@ -929,10 +951,12 @@ h5 a{
 .hot-top-left{
     float:left;
 }
-.hot-top-right{
+.hot-top-right1,.hot-top-right2,.hot-top-right3,.hot-top-right4{
     float:right;
 }
-.hot-top-circle{
+.hot-top-circle1,.hot-top-circle2,.hot-top-circle3,.hot-top-circle4{
+    border:none;
+    outline:none;
     width:10px;
     height:10px;
     border-radius: 50%;
@@ -940,18 +964,25 @@ h5 a{
     float:left;
     margin-right:8px;
 }
-div.active{
+.hot-top-right{
+    float:right;
+}
+button.active{
     background: #ff7919;
 }
 .hot-down{
     width:523px;
+    height:156px;
     overflow: hidden;
     padding-bottom: 18px;
+    position: relative;
 }
-.hot-down-ul{
-    width:1470px;
+.hot-down-ul1,.hot-down-ul2,.hot-down-ul3,.hot-down-ul4{
+    width:1960px;
+    
+    position: absolute;
 }
-.hot-down-li{
+.hot-down-li1,.hot-down-li2,.hot-down-li3,.hot-down-li4{
     width:490px;
     float:left;
 }
@@ -1017,6 +1048,7 @@ div.active{
     width: 12px;
     height: 12px;
     background-color: #fff;
+    float:left;
 }
 .hot-fr{
     float:right;
@@ -1132,6 +1164,20 @@ div.active{
     font-size:18px;
     color:#ff3838;
 }
+.hot-down-right-circle2{
+    float:left;
+    left:100px;
+}
+.hot-down-right-rock{
+    margin-left:80px;
+}
+.hot-down-right-rock2{
+    margin-left:20px;
+}
+.rock_mb{
+    margin-bottom:8px;
+}
+
 /* 话剧 */
 /* drama */
 .hj-title{
@@ -1170,8 +1216,52 @@ div.active{
     color:#5ab7e8;
 }
 /* 音乐会 */
-.music{
+.music1{
     background: #fff;
+}
+.rank-left{
+    float:left;
+    width:37px;
+    margin:0 15px;
+    font-size: 26px;
+    color: #ccc;
+}
+.rank-center{
+    padding-top:10px;
+    float:left;
+    margin-right:20px;
+}
+.rank-center-img{
+    width:82px;
+}
+.rank-right{
+    padding-top:20px;
+    width:124px;
+    float: left;
+}
+.rank-right-p1{
+    padding-bottom:28px;
+}
+.rank-right-a{
+    font-size:14px;
+    color:#333;
+}
+.rank-right-a:hover{
+
+    color:#65bce9
+}
+.rank-right-span1{
+    font-size:16px;
+    color:#65bce9;
+    /* margin-right:5px; */
+}
+.rank-right-span2{
+    font-size:26px;
+    color:#65bce9;
+}
+.rank-right-span3{
+    font-size:14px;
+    color:#b2b2b2;
 }
 /* 儿童剧 */
 .ertong{
@@ -1418,4 +1508,77 @@ div.active{
 }
 .footer-last-i2{
     background-position: -182px -133px;
+}
+/* 右悬浮框 */
+.right-box{
+    width:40px;
+    /* padding:5px; */
+    padding-bottom: 0;
+    /* box-sizing: border-box; */
+    text-align: center;
+    position: fixed;
+    z-index:1;
+    right:20px;
+    bottom:120px;
+    border:1px solid #ebebeb;
+}
+.right-box1,.right-box2{
+    position: relative;
+    border-bottom: 1px solid #ebebeb;
+    
+}
+.right-box1{
+    padding-bottom:5px;
+}
+.right-box-a1{
+    color:#ff7919;
+    font-size:14px;
+    
+}
+.right-box-aa1{
+    display:none;
+    position: absolute;
+    top:0;
+    right: 45px;
+    width: 213px;
+    height: 53px;
+    text-align: right;
+    background: url(../images/icons_03.png) 0 0 no-repeat;
+    background-position: -58px -420px;
+}
+.right-box1:hover .right-box-a1{
+    color:#fff;
+}
+.right-box1:hover{
+    background: #ff7919;
+}
+.right-box1:hover .right-box-aa1{
+    display:block;
+    
+}
+.right-box-a{
+    display:inline-block;
+    text-align: center;
+    width:30px;
+    height:50px;
+    background: url(../images/icons_03.png) no-repeat;
+    
+}
+.right-box-a2{
+    background-position: 0 -427px;
+    
+}
+.right-box-a3{
+    background-position: 0 -355px;
+}
+.right-box-a4{
+    background-position: 0 -465px;
+}
+.right-box-aa2{
+    position: absolute;
+    width:100px;
+    height:100px;
+    top: 54px;
+    background-position: -60px -8px;
+    margin-top: -45px;
 }
